--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/serve": "^1.2.2",
     "@tailwindcss/forms": "^0.4.0",
     "dotenv": "^16.0.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.2"
