--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^1.2.2",
     "@remix-run/serve": "^1.2.2",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/nprogress": "^0.2.0",
     "dotenv": "^16.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
