--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.2"
+    "remix": "^1.2.2",
+    "@remix-run/vercel": "^1.0.6"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.2",
