--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "build:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@remix-run/react": "^1.2.2",
     "@remix-run/serve": "^1.2.2",
+    "@remix-run/vercel": "^1.0.6",
     "@tailwindcss/forms": "^0.4.0",
     "@types/nprogress": "^0.2.0",
     "dotenv": "^16.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.2",
-    "@remix-run/vercel": "^1.0.6"
+    "remix": "1.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.2",
