--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "remix": "1.3.2"
   },
