--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.0",
     "remix": "1.3.2"
   },
   "devDependencies": {
