--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "yarn build:css && remix build",
-    "dev": "concurrently \"yarn dev:css\" \"remix dev\"",
+    "build": "npm run build:css && remix build",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "postinstall": "remix setup node",
     "start": "remix-serve build",
     "dev:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css -w",
@@ -16,15 +16,20 @@
     "@remix-run/react": "^1.2.2",
     "@remix-run/serve": "^1.2.2",
     "@remix-run/vercel": "^1.5.1",
+    "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.4.0",
     "@types/nprogress": "^0.2.0",
+    "domain-functions": "^1.4.0",
     "dotenv": "^16.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.39.7",
     "react-player": "^2.10.0",
-    "remix": "1.3.2"
+    "remix": "1.3.2",
+    "remix-forms": "^1.1.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.2",
