--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.4.0",
     "@types/nprogress": "^0.2.0",
+    "@vercel/analytics": "^0.1.11",
     "domain-functions": "^1.4.0",
     "dotenv": "^16.0.0",
     "nprogress": "^0.2.0",
