--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "postinstall": "remix setup node",
     "start": "remix-serve build",
     "dev:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css -w",
     "build:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@remix-run/react": "^1.17.0",
-    "@remix-run/serve": "^1.17.0",
-    "@remix-run/vercel": "^1.17.0",
+    "@remix-run/node": "^1.3.3",
+    "@remix-run/react": "^1.3.3",
+    "@remix-run/serve": "^1.3.3",
+    "@remix-run/vercel": "^1.3.3",
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/nprogress": "^0.2.0",
@@ -28,12 +28,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-player": "^2.12.0",
-    "remix": "^1.17.0",
     "remix-forms": "^1.6.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.2",
+    "@remix-run/dev": "^1.3.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^7.0.0",
