--- a/package.json
+++ b/package.json
@@ -6,36 +6,35 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "postinstall": "remix setup node",
     "start": "remix-serve build",
     "dev:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css -w",
     "build:css": "tailwindcss -i ./app/styles/tailwind_base.css -o ./app/styles/tailwind.css"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@remix-run/react": "^1.2.2",
-    "@remix-run/serve": "^1.2.2",
-    "@remix-run/vercel": "^1.5.1",
+    "@heroicons/react": "^2.0.18",
+    "@remix-run/node": "^1.18.0",
+    "@remix-run/react": "^1.18.0",
+    "@remix-run/serve": "^1.18.0",
+    "@remix-run/vercel": "^1.18.0",
     "@sendgrid/mail": "^7.7.0",
-    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/nprogress": "^0.2.0",
-    "@vercel/analytics": "^0.1.11",
-    "domain-functions": "^1.4.0",
-    "dotenv": "^16.0.0",
+    "@vercel/analytics": "^1.0.1",
+    "domain-functions": "^1.7.1",
+    "dotenv": "^16.1.4",
     "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.39.7",
-    "react-player": "^2.10.0",
-    "remix": "1.3.2",
-    "remix-forms": "^1.1.0",
-    "zod": "^3.19.1"
+    "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-player": "^2.12.0",
+    "remix-forms": "^1.6.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.2",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@remix-run/dev": "^1.18.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
