--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "7.12.0",
-    "@react-router/serve": "7.12.0",
+    "@icons-pack/react-simple-icons": "^13.11.1",
+    "@react-router/fs-routes": "^7.13.0",
+    "@react-router/node": "^7.13.0",
+    "@react-router/serve": "7.13.0",
+    "@vidstack/react": "^1.12.13",
+    "date-fns": "^4.1.0",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.2.4",
-    "react-router": "7.12.0"
+    "react-player": "^3.4.0",
+    "react-router": "^7.13.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@react-router/dev": "7.12.0",
+    "@react-router/dev": "^7.13.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
