--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@conform-to/react": "^1.17.0",
+    "@conform-to/zod": "^1.17.0",
     "@icons-pack/react-simple-icons": "^13.11.1",
     "@react-router/fs-routes": "^7.13.0",
     "@react-router/node": "^7.13.0",
     "@react-router/serve": "7.13.0",
     "@vidstack/react": "^1.12.13",
     "date-fns": "^4.1.0",
+    "domain-functions": "^3.3.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
@@ -22,6 +25,7 @@
     "react-dom": "^19.2.4",
     "react-player": "^3.4.0",
     "react-router": "^7.13.0",
+    "resend": "^6.9.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
