--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "domain-functions": "^3.3.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
+    "nprogress": "^0.2.0",
     "react": "^19.2.4",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.2.4",
@@ -32,6 +33,7 @@
     "@react-router/dev": "^7.13.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "tailwindcss": "^4.1.13",
