--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-player": "^3.4.0",
     "react-router": "^7.13.0",
     "resend": "^6.9.2",
+    "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
