renomeado o nome do debug full

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
   ],
   "compounds": [
     {
-      "name": "Full Stack: React Router 7",
+      "name": "Debug Full",
       "configurations": ["Debug Server (Node)", "Debug Client (Chrome)"],
       "stopAll": true
     }
